# nova-project

./: App.cpp  App.h  CMakeLists.txt  Commands.txt  MobileAppManager.cpp  MobileAppManager.h  README.md  Tests.cpp
